--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "^2.0.4"
+    "prettier": "2.2.1"
   }
 }
